--- a/day07/ex12.html
+++ b/day07/ex12.html
@@ -18,6 +18,20 @@
         .right {
             text-align: right;
         }
+        .center {
+            text-align: center;
+        }
+        /* 수직 */
+        .bottom {
+            line-height:  180px;
+            vertical-align: bottom;
+
+        }
+        .middle {
+            line-height: 180px;
+            vertical-align: middle;
+        }
+        /* 수평 정렬까지 */
     </style>
 </head>
 <body>
@@ -28,6 +42,16 @@
     <div class="box right">
         Right Align (오른쪽 정렬)
     </div>
-    
+    <div class="box center">
+        Center Align (가운데 정렬)
+    </div>
+
+    <div class="box top">
+        Top Align (위쪽 정렬)
+    </div>
+
+    <div class="box Middle">
+        Middel Align (아래쪽 정렬)
+    </div>
 </body>
 </html>
