--- a/day3/ex02.html
+++ b/day3/ex02.html
@@ -16,7 +16,7 @@
     <script>
         var inpNum1 = document.getElementById("inp-num1")
         var inpNum2 = document.getElementById("inp-num2")
-        var inOut = document.getElementById("inp-out")
+        var inpOut = document.getElementById("inp-out")
         var btnPlus = document.getElementById("btn-plus")
 
         btnPlus.addEventListener('click', () => {
